<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:text="@string/portLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <Button
        android:id="@+id/button_accept"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_port"
        android:text="@string/portAccept" />

    <Button
        android:id="@+id/button_cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_accept"
        android:layout_toRightOf="@+id/button_accept"
        android:text="@string/cancel" />

</RelativeLayout>